// Vitest Snapshot v1

exports[`string > shortcut utf8String > with fixed length 13 > should refuse to parse a value of character length 12 but byte length of 13 1`] = `
{
  "error": [ParseError: String is too short, expected at least 13 characters, got 12

    0d 31 32 33 34 35 36 37 38 39 30 31 ce ba  
    ^^],
  "success": false,
}
`;

exports[`string > shortcut utf8String > with fixed length 13 > should refuse to parse a value of length 12 1`] = `
{
  "error": [ParseError: Expected octet string of length at least 13, but got 12

    0c 31 32 33 34 35 36 37 38 39 30 31 32  
    ^^],
  "success": false,
}
`;

exports[`string > shortcut utf8String > with fixed length 13 > should refuse to parse a value of length 14 1`] = `
{
  "error": [ParseError: String is too long, expected at most 13 characters, got 14

    0e 31 32 33 34 35 36 37 38 39 30 31 32 33 34  
    ^^],
  "success": false,
}
`;

exports[`string > shortcut utf8String > with fixed length 13 > should refuse to serialize a value of character length 12 but byte length of 13 1`] = `
{
  "success": true,
  "value": Uint8Array [
    13,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    48,
    49,
    206,
    186,
  ],
}
`;

exports[`string > shortcut utf8String > with fixed length 13 > should refuse to serialize a value of length 12 1`] = `
{
  "error": [SerializeError: Expected octet string of length at least 13, but got 12],
  "success": false,
}
`;

exports[`string > shortcut utf8String > with fixed length 13 > should refuse to serialize a value of length 14 1`] = `
{
  "success": true,
  "value": Uint8Array [
    13,
    49,
    50,
    51,
    52,
    53,
    54,
    55,
    56,
    57,
    48,
    49,
    50,
    51,
  ],
}
`;
